# youqu2-transfer-youqu3

./: .gitignore  README.md  pyproject.toml
transfer/: __version__.py  cli.py  dde_desktop_public_method.py  main.py  mk_method_names.py
transfer/public/: dde_control_center_public_method.py  dde_desktop_public_method.py  dde_dock_public_method.py  dde_launcher_public_method.py  right_menu_public_method.py
